--- a/pages/good/good.wxss
+++ b/pages/good/good.wxss
@@ -27,20 +27,25 @@
 .nav_goods_box{
  width:33.33%;
 text-align:center;
+
 margin-top:20rpx;
 margin-bottom:20rpx;
 
 }
+/* .nav_right_box {
+  margin: 0 auto;
+} */
 .nav_goods_name{
+  padding-left: 15rpx;
   line-height:20px;
-  font-size:14px;
+  font-size:12px;
   color:#333;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   overflow:hidden;
   -webkit-box-orient: vertical;
-  width: 170rpx;
+  width: 150rpx;
 }
 .nav_goods_price{
   line-height:20px;
