--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -201,7 +201,7 @@
 		</checkbox-group>
 			<image class="tips_img" src="img/u927.png" mode="widthFix"> </image>
       <view style='font-size:23rpx;color:#949494;margin-left:8rpx;'>*必选，默认1年</view>
-      	<view class='invoice_money text_red' style='font-size:23rpx;margin-left:180rpx'>
+      	<view class='invoice_money text_red' style='margin-left:150rpx'>
 				¥ 0.00
 			</view>
 		</view>
