--- a/storage/pages/zcDetail/zcDetail.wxss
+++ b/storage/pages/zcDetail/zcDetail.wxss
@@ -51,7 +51,8 @@ view{overflow: initial;}
 .tk .reply view{word-break: break-all;}
 .ft{position: fixed; bottom: 0; left: 0; width: 100%; height: 100rpx; border-top: 1px solid #e4e4e4; background-color: #fff;}
 .ftList{display: flex; text-align: center; height: 100rpx; line-height: 100rpx;}
-.ftList .cell{line-height: normal; box-sizing: border-box; max-width: 100rpx; min-width: 13%; flex: 1; display: block; height: 100rpx; color: #999; padding-top: 10rpx;}
+.ftList .cell{line-height: normal; box-sizing: border-box; max-width: 100rpx; min-width: 13%; flex: 1; display: block; height: 100rpx; color: #999; padding-top: 10rpx; position: relative;}
+.ftList .cell .kf{position: absolute; width: 100%; height: 100rpx; z-index: 99; opacity: 0;}
 .ftList image{width: 40rpx; height: 40rpx; display: block; margin: 8rpx auto 0;}
 .ftList .ft-btn{max-width: 450rpx; box-sizing: border-box; background-color: #cc363f; color: #fff; text-align: center; display: block; flex: 1;}
 .ftList .ft-btn text{display: block; height: 100%;}
