--- a/wxParse/wxParse.wxml
+++ b/wxParse/wxParse.wxml
@@ -18,7 +18,7 @@
 </template>
 
 <template name="wxParseImg">
-  <image class="{{item.classStr}} wxParse-{{item.tag}}" data-from="{{item.from}}" data-src="{{item.attr.src}}" data-idx="{{item.imgIndex}}" src="https://teahouse.siring.com.cn{{item.attr.src}}" mode="aspectFit" bindload="wxParseImgLoad"  mode="widthFix" style="width:375px;margin-top:-11rpx;"
+  <image class="{{item.classStr}} wxParse-{{item.tag}}" data-from="{{item.from}}" data-src="{{item.attr.src}}" data-idx="{{item.imgIndex}}" src="https://teahouse.siring.com.cn{{item.attr.src}}" mode="aspectFit" bindload="wxParseImgLoad"  mode="widthFix" style="width:100%;margin-top:-11rpx;"
   />
 </template>
 
