--- a/pages/good/good.wxss
+++ b/pages/good/good.wxss
@@ -11,6 +11,7 @@
 }
 .nav_right{
   width: 550rpx;
+  margin-left: 200rpx !important;
   overflow: scroll;
 }
 .nac_left_li{
@@ -71,7 +72,7 @@ margin-bottom:20rpx;
         }
           .dv1 {
             width:253rpx;
-            height:22px;
+            height:px;
             position:relative;
             overflow:hidden;
             margin: 10px auto;
