--- a/sweep/pages/sweep_detail/sweep_detail.wxss
+++ b/sweep/pages/sweep_detail/sweep_detail.wxss
@@ -5,6 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 10rpx 0;
+    background-color: rgb(249, 249, 249);
 }
 .img{
     width: 156rpx;
@@ -14,7 +16,6 @@
     margin-top: 22rpx;
 }
 .lista{
-    display: flex;
     font-size: 28rpx;
     height: 111rpx;
     line-height: 111rpx;
@@ -22,6 +23,7 @@
     padding-right: 41rpx;
     display: flex;
     justify-content: space-between;
+    
 
 }
 .lefta{
@@ -34,7 +36,7 @@
     display: flex;
     font-size: 28rpx;
     padding-left: 41rpx;
-    display: flex;
+    margin:30rpx 0 10rpx;
     justify-content: space-between;
 
 }
