--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -113,7 +113,7 @@
 	
 	.ser-type {
 		padding: 20rpx;
-		margin: 10rpx 0 10rpx 0;
+		margin-top: 10rpx;
 		display: flex;
 		justify-content: space-between;
 		background: #fff;
@@ -174,6 +174,9 @@
 	.bc_white {
 		background: #fff;
     margin-bottom: 20rpx;
+    margin-top:10rpx;
+    
+
 	}
   	.bc_white>view{
    line-height: 94rpx;
