--- a/app.wxss
+++ b/app.wxss
@@ -85,7 +85,7 @@ radio{
   width: 32rpx;/* 最好是4的倍数，不然会不在中间 */
   height: 32rpx;
   border: 2rpx solid #C4C4C4;/* 设置边框（外圆） */
-  font-size: 0;/* 让边框重合 */
+  font-size: 0rpx;/* 让边框重合 */
   overflow: hidden;
 }
 radio .wx-radio-input{
